--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@libsql/client": "^0.6.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
