--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@libsql/client": "^0.6.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
